--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "better-sqlite3": "^11.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
